# GaugeTheoryRunner

./: .gitmodules  Cargo.toml  ksweep.sh  markov_runner.py  markov_scc.py  markov_scc.sh  markov_study_launcher.sh  markov_study_winding.py  run.py  run_binary.py  run_chemical_sweep.py  run_cosine.py  run_rec.py  run_rec.sh  run_villain.py
final_paper_scripts/: run_all_markov.sh  run_all_sweeps.sh  run_custom_sweep.sh  run_superlarge_kc.sh
jupyter/: Autocorr.ipynb  ChemicalPotentialAnalyze.ipynb  ChemicalPotentialCheck.ipynb  MarkovScaling.ipynb  PaperPlots.ipynb  PartialPlotMarkov.ipynb  PhaseTransition-Binary.ipynb  PhaseTransition-Cosine.ipynb  PhaseTransition-Villain.ipynb  PlotMarkovLoopProbs.ipynb  Untitled.ipynb  out-chem.npz
jupyter/autocorr_data/: autocorr_L32.npz
jupyter/markov_data/: markov.npz  markov_L10_k050_n1024.npz  markov_L10_k055_n1024.npz  markov_L10_k060_n1024.npz  markov_L10_k065_n1024.npz  markov_L10_k070_n1024.npz  markov_L10_k071_n1024.npz  markov_L10_k072_n1024.npz  markov_L10_k073_n1024.npz  markov_L10_k074_n1024.npz  markov_L10_k075_n1024.npz  markov_L10_k076_n1024.npz  markov_L10_k077_n1024.npz  markov_L10_k078_n1024.npz  markov_L10_k079_n1024.npz  (+244 more)
scripts/: drill_winding.sh  large_winding_qsub.py  large_winding_qsub.sh  markov_critical_hotstart.sh  markov_rg.sh  markov_rg_monolith.sh  markov_scc.sh  markov_study_winding.sh  parameters.npz  read_npz.py  rename_to_hashes.py  run_binary.py  run_rec.py  run_rec.sh  run_several_multiloops.sh  run_several_multiloops_mephi.py  run_simple_sweep.sh  run_sweep_hot_or_cold.sh  run_villain.py
src/: lib.rs  main.rs  markov.rs  potentials.rs  print_potential.rs  sweep.rs
(+265 files in other folders)
