[package]
name = "gauge_mc_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "markov"
path = "src/markov/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ndarray = "0.15"
ndarray-npy = "0.8"
rand = "0.8"
log = "0.4"
chrono = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
scilib = "1.0"
num-complex = "0.4"

[dependencies.gaugemc]
git = "https://github.com/Renmusxd/GaugeMC.git"
default-features = false
features = ["gpu-cuda"]
