[package]
name = "gauge_mc_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "markov"
path = "src/markov.rs"

[[bin]]
name = "sweep"
path = "src/sweep.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ndarray = "0.16"
ndarray-npy = "0.9"
rand = "0.8"
log = "0.4"
chrono = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
complex-bessel-rs = "1.2.1"
num-complex = "0.4"

[dependencies.gaugemc]
git = "https://github.com/Renmusxd/GaugeMC.git"
default-features = false
features = ["gpu-cuda"]
